--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1> welcome to my Com science webpage</h1>
     <p> this is CS information</p>
     <a href="2.html"> go to detail</a>
+
+    <p> design by natnicha </p>
+    <h3>RMUTT</h3>
     
 </body>
 </html>
